settings for tab on which VisualVM should open